Code/PXUltimaC/OS/Library/PXLibrary.h

#ifndef PXLibraryINCLUDE
#define PXLibraryINCLUDE

#include <OS/System/PXOSVersion.h>

#define PXLibraryUSE OSDeviceToUse == OSDeviceDestop
#if PXLibraryUSE

#if OSUnix
#include <sys/types.h>
#include <dlfcn.h>

typedef void* LibraryFunction;
typedef void* LibraryDirectoryID;

#elif OSWindows
#include <windows.h>
#include <DbgHelp.h>

typedef FARPROC LibraryFunction;
//typedef DLL_DIRECTORY_COOKIE LibraryDirectoryID;
#endif

#include <Media/PXText.h>
#include <OS/Process/PXProcess.h>

#ifdef __cplusplus
extern "C"
{
#endif

    typedef enum PXSymbolType_
    {
        PXSymbolTypeNull,
        PXSymbolTypeExe,
        PXSymbolTypeCompiland,
        PXSymbolTypeCompilandDetails,
        PXSymbolTypeCompilandEnv,
        PXSymbolTypeFunction,
        PXSymbolTypeBlock,
        PXSymbolTypeData,
        PXSymbolTypeAnnotation,
        PXSymbolTypeLabel,
        PXSymbolTypePublicSymbol,
        PXSymbolTypeUDT,
        PXSymbolTypeEnum,
        PXSymbolTypeFunctionType,
        PXSymbolTypePointerType,
        PXSymbolTypeArrayType,
        PXSymbolTypeBaseType,
        PXSymbolTypeTypedef,
        PXSymbolTypeBaseClass,
        PXSymbolTypeFriend,
        PXSymbolTypeFunctionArgType,
        PXSymbolTypeFuncDebugStart,
        PXSymbolTypeFuncDebugEnd,
        PXSymbolTypeUsingNamespace,
        PXSymbolTypeVTableShape,
        PXSymbolTypeVTable,
        PXSymbolTypeCustom,
        PXSymbolTypeThunk,
        PXSymbolTypeCustomType,
        PXSymbolTypeManagedType,
        PXSymbolTypeDimension
    }
    PXSymbolType;

    typedef struct PXSymbol_
    {
        ULONG TypeIndex;        // Type Index of symbol
        ULONG Index;
        ULONG Size;
        void* ModBase;          // Base Address of module comtaining this symbol
        ULONG Flags;

        void* Address;          // Address of symbol including base address of module
        ULONG Register;         // register holding value or pointer to value
        ULONG Scope;            // scope of the symbol

        PXSymbolType Type;// PDB classification
        PXText Name;
    } 
    PXSymbol;



    typedef void (*PXSymbolDetectedEvent)(const PXSymbol* const pxSymbol);





    typedef struct PXLibrary_
    {
#if OSUnix
        void* ID;
#elif OSWindows
        HMODULE ID; // LibraryHandle, HINSTANCE (semms is also okey)
#endif

        PXProcessHandle ProcessHandle;
    }
    PXLibrary;

    PXPublic PXBool PXLibraryOpen(PXLibrary* const pxLibrary, const PXText* const filePath); //  gain access to an executable object file. RTLD_LAZY
    PXPublic PXBool PXLibraryClose(PXLibrary* const pxLibrary); // close a dlopen object
    PXPublic PXBool PXLibraryGetSymbol(PXLibrary* const pxLibrary, LibraryFunction* libraryFunction, const PXText* symbolName); // obtain the address of a symbol from a dlopen object

    PXPublic PXActionResult PXLibraryName(PXLibrary* const pxLibrary, PXText* const libraryName);

#if OSUnix
#elif PXOSWindowsDestop
    PXPrivate BOOL CALLBACK PXLibraryNameSymbolEnumerate(PSYMBOL_INFO pSymInfo, ULONG SymbolSize, PVOID UserContext);

   // PXPrivate BOOL CALLBACK PXLibraryNameSymbolEnumerate(PCSTR SymbolName, DWORD64 SymbolAddress, ULONG SymbolSize, PVOID UserContext);
#endif

    PXPublic PXActionResult PXLibraryParseSymbols(const PXText* const libraryFilePath, PXSymbolDetectedEvent pxSymbolDetectedEvent);

    // void SymbolVector(); // PXProgramming interface to dynamic linking loader.

     //static ErrorCode SearchDirectoryAdd(const wchar_t* directoryPath, LibraryDirectoryID& libraryDirectoryID);
     //static ErrorCode SearchDirectoryRemove(LibraryDirectoryID& libraryDirectoryID);

#ifdef __cplusplus
}
#endif

#endif
#endif